--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name":        "topdata/topdata-development-helper-sw6",
     "description": "A Shopware6 Plugin providing some helpers for developers.",
-    "version":     "v0.0.4",
+    "version":     "v0.0.5",
     "type":        "shopware-platform-plugin",
     "license":     "MIT",
     "authors":     [
@@ -12,7 +12,8 @@
         }
     ],
     "require":     {
-        "shopware/core": "6.4.* || 6.5.* || 6.6.*"
+        "shopware/core":                  "6.4.* || 6.5.* || 6.6.*",
+        "topdata/topdata-foundation-sw6": "^1.0"
     },
     "extra":       {
         "topdata-technical-documentation": "https://github.com/topdata-software-gmbh/topdata-development-helper-sw6/blob/main/README.md",
