--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require":     {
-        "shopware/core":                  "6.4.* || 6.5.* || 6.6.*",
+        "shopware/core":                  "6.5.* || 6.6.*",
         "topdata/topdata-foundation-sw6": "^1.0"
     },
     "extra":       {
