Update project configuration to include Rector
- Add vendor and .rector-cache to .gitignore
- Add rector as a development dependency in composer.json
- Create rector.md with usage instructions
- Create rector.php for Rector configuration
- Remove redundant default command names in src/Command
- Update composer.lock with new dependencies

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,6 @@
             "role":     "Manufacturer"
         }
     ],
-    "require":     {
-        "shopware/core":                  "6.5.* || 6.6.*",
-        "topdata/topdata-foundation-sw6": "^1.0"
-    },
     "extra":       {
         "topdata-technical-documentation": "https://github.com/topdata-software-gmbh/topdata-development-helper-sw6/blob/main/README.md",
         "topdata-user-documentation":      null,
@@ -42,5 +38,12 @@
         "psr-4": {
             "Topdata\\TopdataDevelopmentHelperSW6\\": "src/"
         }
+    },
+    "require":     {
+        "shopware/core":                  "6.5.* || 6.6.*",
+        "topdata/topdata-foundation-sw6": "^1.0"
+    },
+    "require-dev": {
+        "rector/rector": "^1.2"
     }
 }
