feat: Enhance config constants generator - Updates the config constants generator command to improve functionality and clarity. - Refactors the command to extract more information from the config.xml, including labels, help texts, and options. - Improves output formatting, adds comments to the generated PHP file, and handles edge cases more gracefully. - Enhances input validation and error handling, providing more informative feedback to the user. - Adds support for writing directly to standard output - Updates dependencies in composer.json

--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,10 @@
         }
     },
     "require":     {
-        "shopware/core":                  "6.5.* || 6.6.*",
-        "topdata/topdata-foundation-sw6": "^1.0"
+        "shopware/core": "6.4.* || 6.5.* || 6.6.*"
     },
     "require-dev": {
-        "rector/rector": "^1.2"
+        "xxxxxxxxxxxxxxxxxxxx-topdata/topdata-foundation-sw6": "^1.0",
+        "rector/rector":                                       "^1.2"
     }
 }
