--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "topdata/topdata-development-helper-sw6",
     "description": "A Shopware6 Plugin providing some helpers for developers.",
-    "version": "0.1.1",
+    "version": "2.0.0",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
@@ -40,11 +40,11 @@
         }
     },
     "require": {
-        "shopware/core": "6.4.* || 6.5.* || 6.6.*",
-        "symfony/console": "^5.4 || ^6.0"
+        "shopware/core": "6.7.*",
+        "symfony/console": "^5.4 || ^6.0",
+        "topdata/topdata-foundation-sw6": "^1.3"
     },
     "require-dev": {
-        "xxxxxxxxxxxxxxxxxxxx-topdata/topdata-foundation-sw6": "^1.0",
         "rector/rector": "^1.2"
     }
 }
