--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         }
     },
     "require": {
-        "shopware/core": "6.4.* || 6.5.* || 6.6.*",
+        "shopware/core": "6.4.* || 6.5.* || 6.6.*"
     },
     "require-dev": {
         "xxxxxxxxxxxxxxxxxxxx-topdata/topdata-foundation-sw6": "^1.0",
